--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;700&amp;display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/66884a4d36.js" crossorigin="anonymous"></script>
     <title>Expense Tracker</title>
 </head>
 
@@ -45,12 +46,68 @@
                 <button type="button" class="add-btn btn btn-success">Add Expense</button>
             </div>
         </div>
+        <div class="expense-table">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Expense Name</th>
+                        <th scope="col">Date Spent</th>
+                        <th scope="col">Amount(LKR)</th>
+                        <th scope="col">Expense Type</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-primary">
+                        <td>Mark</td>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
+                                    aria-hidden="true"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Jacob</td>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
+                                    aria-hidden="true"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Jacob</td>
+                        <td>Jacob</td>
+                        <td>Jacob</td>
+                        <td>@twitter</td>
+                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
+                                    aria-hidden="true"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Jacob</td>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
+                                    aria-hidden="true"></i></button></td>
+                    </tr>
+                    <tr class="table-primary">
+                        <td>Jacob</td>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
+                                    aria-hidden="true"></i></button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h5>
+            <small class="text-muted">You have spent a total of </small>
+            LKR 100,0000
+        </h5>
 
 
 
-
-
-    </div>
     </div>
 
     <script src="js/bootstrap.js"></script>
