--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="input-fields">
                 <div class="row">
                     <div class="column col-md-12">
-                        <label for="expense-name" id="expense-name">Expense Name
+                        <label for="expense-name" id="expense-label">Expense Name
                             <input type="text" name="expense-name" id="expense-name"
                                 placeholder="Enter the expense name">
                     </div>
@@ -37,13 +37,14 @@
                     <div class="column col-md-4">
                         <label for="type">Expense Type</label>
                         <select id="type" name="type">
-                            <option value="" selected disabled hidden>Choose type</option>
-                            <option value="personal">Personal</option>
-                            <option value="business">Business</option>
+                            <option value="choose-type" selected disabled hidden>Choose type</option>
+                            <option value="Personal">Personal</option>
+                            <option value="Business">Business</option>
                         </select>
                     </div>
                 </div>
-                <button type="button" class="add-btn btn btn-success">Add Expense</button>
+                <button type="button" class="add-btn btn btn-success not-active" id="add-expense"
+                    onclick="addExpense()">Add Expense</button>
             </div>
         </div>
         <div class="expense-table">
@@ -57,53 +58,14 @@
                         <th scope="col"></th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr class="table-primary">
-                        <td>Mark</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Jacob</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Jacob</td>
-                        <td>Jacob</td>
-                        <td>Jacob</td>
-                        <td>@twitter</td>
-                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>Jacob</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
-                    <tr class="table-primary">
-                        <td>Jacob</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td><button type="button" class="btn btn-danger"><i class="fa fa-times"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
+                <tbody class="table-body">
+
                 </tbody>
             </table>
         </div>
         <h5>
             <small class="text-muted">You have spent a total of </small>
-            LKR 100,0000
+            LKR <span class="total-expense">0</span>
         </h5>
 
 
